--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,51 +1,17 @@
-.container {
-  padding: 20px;
-}
-
-.goBack {
-  margin-bottom: 20px;
-  padding: 5px 10px;
-  background-color: #f0f0f0;
-  border: none;
-}
-
-.details {
-  display: flex;
-  gap: 20px;
-}
-
-.poster {
-  width: 300px;
-  border-radius: 5px;
-}
-
-.title {
-  font-size: 24px;
+.goBtn {
+  display: inline-block;
+  padding: 4px 10px;
+  border: 0.7px solid var(--black);
+  border-radius: 4px;
   margin-bottom: 10px;
-}
-
-.score {
-  margin-bottom: 20px;
-}
-
-.subtitle {
-  font-weight: bold;
-}
-
-.additional {
-  margin-top: 30px;
-}
-
-.link {
   text-decoration: none;
-  color: blue;
+  background-color: var(--lightGrey);
 }
 
-.link:hover {
-  text-decoration: underline;
+.goBtn:visited {
+  color: inherit;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
+.goBtn:hover {
+  background-color: var(--lightHover);
 }
