--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,37 +1,8 @@
-.container {
+.notFoundText {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  background-color: #f8f9fa;
-  font-family: "Arial", sans-serif;
-}
-
-.heading {
-  font-size: 48px;
-  font-weight: bold;
-  color: #dc3545;
-  margin-bottom: 20px;
-}
-
-.message {
-  font-size: 20px;
-  color: #343a40;
-  margin-bottom: 30px;
-}
-
-.link {
-  font-size: 18px;
-  color: #007bff;
-  text-decoration: none;
-  padding: 10px 20px;
-  border: 2px solid #007bff;
-  border-radius: 4px;
-  background-color: #ffffff;
-}
-
-.link:hover {
-  background-color: #007bff;
-  color: white;
+  margin-top: 100px;
+  font-size: 56px;
+  font-weight: 500;
+  color: var(--red);
 }
